Fix spacing issues: navbar spacing, publication line spacing with !important, increase image heights to fixed 250px, improve overall spacing

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -48,11 +48,11 @@ hr {
     display: inline-block;
     margin: 0;
     padding: 5px 0 5px 0;
-    margin-left: 20px;
+    margin-left: 15px;
 }
 .nav-list {
     list-style-type: none;
-    margin: 0 5px 0 10px;
+    margin: 0 5px 0 5px;
 }
 .alignable {
     display: inline-block;
